--- a/scss/blocks/_benefit.scss
+++ b/scss/blocks/_benefit.scss
@@ -79,10 +79,11 @@
 
   &__list {
     margin: 0 0 35px 0;
-    padding: 0;
+    padding: 0 0 0 30px;
     display: flex;
     flex-direction: column;
     gap: 10px 0;
+    list-style-type: none;
     color: $color-white;
 
     @include vp-768 {
@@ -93,6 +94,15 @@
     @include vp-1024 {
       margin: 0 0 40px 0;
     }
+  }
+
+  &__item {
+    position: relative;
+  }
+
+  &__icon {
+    position: absolute;
+    left: -30px;
   }
 
   &__text {
