--- a/scss/style.scss
+++ b/scss/style.scss
@@ -27,3 +27,6 @@
 @import "blocks/_connect";
 @import "blocks/_benefit";
 @import "blocks/_faq";
+@import "blocks/_privileges";
+@import "blocks/_privileges-banner";
+@import "blocks/_privileges-card";
