--- a/scss/blocks/_application.scss
+++ b/scss/blocks/_application.scss
@@ -29,6 +29,7 @@
       margin: 0 0 32px 0;
       font-size: 28px;
       line-height: 32px;
+      letter-spacing: -0.01em;
     }
 
     @include vp-1024 {
