--- a/scss/blocks/_connect.scss
+++ b/scss/blocks/_connect.scss
@@ -23,6 +23,7 @@
     @include vp-768 {
       font-size: 28px;
       line-height: 32px;
+      letter-spacing: -0.01em;
     }
 
     @include vp-1024 {
