--- a/scss/blocks/_faq.scss
+++ b/scss/blocks/_faq.scss
@@ -15,6 +15,7 @@
       align-items: flex-start;
       justify-content: space-between;
       gap: 0 24px;
+      position: relative;
     }
   }
 
@@ -29,6 +30,8 @@
       margin: 0;
       width: 380px;
       flex-shrink: 0;
+      position: sticky;
+      top: 77px;
     }
   }
 
@@ -65,6 +68,7 @@
     @include vp-768 {
       font-size: 28px;
       line-height: 32px;
+      letter-spacing: -0.01em;
     }
 
     @include vp-1024 {
@@ -87,7 +91,18 @@
   &__element {
     border-bottom: 2px solid $color-solitude-3;
 
+    @include vp-1024 {
+      padding: 18px 24px;
+      border-radius: 12px;
+      background-color: $color-solitude-1;
+      border-bottom: none;
+    }
+
     &.is-active {
+      @include vp-1024 {
+        padding: 18px 24px 24px;
+      }
+
       .faq__content {
         display: block;
       }
@@ -95,6 +110,16 @@
       .faq__button-icon {
         &::after {
           opacity: 0;
+        }
+      }
+
+      .faq__button {
+        @include vp-768 {
+          padding: 19px 0 16px 0;
+        }
+
+        @include vp-1024 {
+          padding: 0 0 20px 0;
         }
       }
     }
@@ -121,7 +146,7 @@
 
     @include vp-1024 {
       align-items: flex-start;
-      padding: 18px 24px;
+      padding: 0;
     }
   }
 
@@ -134,6 +159,8 @@
 
     @include vp-1024 {
       max-width: 450px;
+      font-size: 18px;
+      line-height: 24px;
     }
 
     @include vp-1304 {
@@ -183,11 +210,11 @@
     line-height: 18px;
 
     @include vp-768 {
-      padding: 0 0 16px 0;
+      padding: 0 0 20px 0;
     }
 
     @include vp-1024 {
-      padding: 2px 24px 24px 24px;
+      padding: 0;
     }
 
     @include vp-1304 {
