--- a/scss/blocks/_privileges-banner.scss
+++ b/scss/blocks/_privileges-banner.scss
@@ -2,20 +2,54 @@
   border-radius: 16px;
   box-shadow: 0px 4px 20px 0px $color-black-russian-3;
 
+  @include vp-1024 {
+    box-shadow: none;
+  }
+
   &__list {
-    display: flex;
-    flex-direction: column;
+    display: grid;
     gap: 16px;
     margin: 0;
     padding: 20px;
     list-style-type: none;
+
+    @include vp-768 {
+      gap: 24px;
+      padding: 24px;
+    }
+
+    @include vp-1024 {
+      grid-template-columns: repeat(3, 1fr);
+      padding: 0;
+    }
+  }
+
+  &__item {
+    display: flex;
+    flex-direction: column;
+    gap: 4px;
+
+    @include vp-1024 {
+      padding: 32px 22px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 8px;
+      border-radius: 12px;
+      background-color: $color-solitude-1;
+    }
   }
 
   &__title {
-    margin: 0 0 4px 0;
+    margin: 0;
     font-size: 18px;
     line-height: 24px;
     font-weight: 600;
+
+    @include vp-1024 {
+      font-size: 24px;
+      line-height: 28px;
+    }
   }
 
   &__text {
@@ -24,5 +58,14 @@
     line-height: 18px;
     color: $color-storm-grey-1;
     letter-spacing: 0.01rem;
+
+    @include vp-768 {
+      font-size: 16px;
+      line-height: 22px;
+    }
+
+    @include vp-1024 {
+      text-align: center;
+    }
   }
 }
