--- a/scss/blocks/_privileges-card.scss
+++ b/scss/blocks/_privileges-card.scss
@@ -31,7 +31,11 @@
 
     @include vp-1024 {
       align-items: unset;
-      padding: 48px 300px 48px 100px;;
+      padding: 48px 300px 48px 100px;
+    }
+
+    @include vp-1304 {
+      padding: 48px 444px 48px 120px;
     }
   }
 
@@ -80,7 +84,6 @@
     line-height: 18px;
     font-weight: 400;
     color: $color-storm-grey-3;
-    letter-spacing: -0.01rem;
 
     @include vp-1024 {
       font-size: 16px;
@@ -100,6 +103,10 @@
         text-align: unset;
       }
     }
+
+    &--desktop-lg {
+      max-width: 390px;
+    }
   }
 
   &__link {
@@ -115,6 +122,10 @@
       right: 40px;
       top: unset;
       bottom: 0;
+    }
+
+    @include vp-1304 {
+      right: 184px;
     }
   }
 }
