--- a/scss/blocks/_privileges-card.scss
+++ b/scss/blocks/_privileges-card.scss
@@ -22,7 +22,7 @@
     gap: 8px;
     border-radius: 16px;
     position: relative;
-    padding: 16px 100px 16px 20px;
+    padding: 16px 150px 16px 20px;
     background-color: $color-alice-blue;
 
     @include vp-768 {
@@ -111,12 +111,21 @@
 
   &__link {
     color: $color-royal-blue-1;
+
+    &:hover,
+    &:focus-visible {
+      color: $color-free-speech-blue;
+    }
   }
 
   &__picture {
     position: absolute;
     right: 0;
     top: 8px;
+
+    @media (min-width: 478px) {
+      top: 0;
+    }
 
     @include vp-768 {
       right: 40px;
