--- a/scss/blocks/_privileges.scss
+++ b/scss/blocks/_privileges.scss
@@ -21,12 +21,11 @@
 
     @include vp-1024 {
       display: flex;
-      margin: 0 calc(-50vw + 50%);
       background-color: $color-royal-blue-1;
       position: absolute;
       height: 2px;
-      width: 100vw;
-      top: 42px;
+      width: 100%;
+      top: 48%;
       left: 0;
       z-index: -1;
     }
@@ -34,6 +33,8 @@
 
   &__title {
     margin: 0 0 16px 0;
+    padding: 0 15px;
+    
     font-size: 26px;
     line-height: 32px;
     font-weight: 600;
@@ -43,6 +44,7 @@
     @include vp-768 {
       font-size: 28px;
       line-height: 32px;
+      padding: 0 20px;
     }
 
     @include vp-1024 {
@@ -62,6 +64,8 @@
     color: $color-storm-grey-1;
 
     @include vp-1024 {
+      max-width: 736px;
+      margin: 0 auto;
       font-size: 18px;
       line-height: 24px;
       text-align: center;
